--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "name": "Notify App",
+  "name": "Messaging App",
   "author": {
-    "name": "Zendesk",
-    "email": "support@zendesk.com"
+    "name": "mrut",
+    "email": "mark@mrut.me"
   },
   "defaultLocale": "en",
-  "private": false,
+  "private": true,
   "location": "top_bar",
-  "version": "0.2.6",
+  "version": "0.1",
   "frameworkVersion": "1.0"
 }
